--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.0",
     "express": "^4.15.5",
+    "materialize-css": "^0.100.2",
     "nodemon": "^1.12.1"
   }
 }
