--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     }
   },
   "dependencies": {
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.100.2",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.1",
     "react": "^15.6.1",
