--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13",
+    "react-slick": "^0.15.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
